--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- Navbar Start -->
   <div class="container-fluid bg-light position-fixed shadow">
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
-      <a href="" class="navbar-brand font-weight-bold text-secondary">
+      <a href="./index.html" class="navbar-brand font-weight-bold text-secondary">
         <span class="text-primary logo-text-main "><img class="logo-text-main-img" src="./imgnew/deltape-logo1.png" />
         </span>
       </a>
@@ -67,12 +67,12 @@
           <a href="#aboutUs" class="nav-item nav-link active">About Us</a>
 
 
-          <a href="#Features" class="nav-item nav-link active">For Institutes</a>
-          <a href="#Features" class="nav-item nav-link active">For Parents</a>
+          <a href="./institutes.html" class="nav-item nav-link active">For Institutes</a>
+          <a href="./parents.html" class="nav-item nav-link active">For Parents</a>
           <!-- <a href="#Features" class="nav-item nav-link active">Features</a>
           <a href="#HowitWorks" class="nav-item nav-link active">How it Works</a> -->
           <!-- <a href="#Benefits" class="nav-item nav-link active">Benefits</a> -->
-          <a href="#Contact" class="nav-item nav-link active">Contact Us</a>
+          <a href="./contactus.html" class="nav-item nav-link active">Contact Us</a>
         </div>
         <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
@@ -122,7 +122,7 @@
         <a href="#" class="btn btn-primary mt-1 py-3 px-5">Book Demo</a>
         <a href="#" class="btn btn-secondary mt-1 py-3 px-5 ml-5 learn-More-btn-sec-top">Learn More</a>
       </div>
-      <div class="col-lg-6 text-center text-lg-right">
+      <div class="col-lg-6 text-center main-img-sec-top-sec-div text-lg-right">
         <img class="img-fluid main-img-sec mt-5" src="imgnew/home-main-right.png" alt="" />
       </div>
     </div>
