--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="row align-items-center px-3">
       <div class="col-lg-6 text-center text-lg-left px-md-5">
         <!-- <h4 class="text-white mb-4 mt-5 mt-lg-0">Kids Learning Center</h4> -->
-        <h3 class="display-4 font-weight-bold main-top-header-text text-white1">
+        <h3 class="display-4 top-header--100 font-weight-bold main-top-header-text text-white1">
           <span class="delta-main-color">Effortless Fee Payment</span>
         </h3>
         <h3 class="display-4 font-weight-bold main-top-header-text1 text-white2">
@@ -123,13 +123,16 @@
         <a href="#" class="btn btn-secondary mt-1 py-3 px-5 ml-5 learn-More-btn-sec-top">Learn More</a>
       </div>
       <div class="col-lg-6 text-center main-img-sec-top-sec-div text-lg-right">
-        <img class="img-fluid main-img-sec mt-5" src="imgnew/home-main-right.png" alt="" />
+        <img class="img-fluid main-img-sec mt-522" src="imgnew/home-main-right.png" alt="" />
       </div>
     </div>
   </div>
   <div class="Our-Solutions-box">
     <h2 class="main-new-header">Our Solutions</h2>
     <div class="Our-Solutions-con">
+      <div class="left-new-image-sec-count">
+        <img src="./imgnew/pipe2 2.png" />
+      </div>
       <div class="Our-Solutions-con1">
         <div class="Solutions-con1-left">
           <img class="desktop-img-view" src="./imgnew/Group 1707479869.png" />
@@ -137,13 +140,18 @@
         <div class="Solutions-con1-right">
           <h4>Delta Zero</h4>
           <img class="mobile-img-view" src="./imgnew/Group 1707479869.png" />
-          <ul class="Solutions-sec-points-sec">
-            <li>Delta Zero lets parents pay school fees in easy, zero-interest installments.
+          <ul class="Solutions-sec-points-sec Solutions-sec-points-sec1">
+            <li><img src="./imgnew/Frame 1707482440.png" /> <span>Delta Zero lets parents pay school fees in easy,
+                zero-interest installments.</span>
             </li>
-            <li> It makes education affordable by spreading payments over time, easing financial stress.</li>
-            <li> Schools can offer a stress-free option, empowering parents to focus on their children’s education
-              without
-              hefty upfront costs.</li>
+            <li> <img src="./imgnew/Frame 1707482441.png" /><span>It makes education affordable by spreading payments
+                over
+                time, easing financial stress.</span></li>
+            <li> <img src="./imgnew/Frame 1707482442.png" /><span>Schools can offer a stress-free option, empowering
+                parents
+                to focus on their children’s education
+                without
+                hefty upfront costs.</span></li>
 
           </ul>
         </div>
@@ -152,42 +160,49 @@
         <div class="Solutions-con1-right">
           <h4>Delta Auto</h4>
           <img class="mobile-img-view" src="./imgnew/image 122.png" />
-          <ul class="Solutions-sec-points-sec">
-            <li>Delta Auto ensures that schools receive fees on time without the hassle of follow-ups.</li>
-            <li>This system
-              automates fee collection through an auto-debit setup, allowing parents to set up payments and forget about
-              them. </li>
-            <li>Schools benefit from a steady cash flow and reduced administrative tasks, while parents enjoy the
-              convenience of a seamless, automated payment process.</li>
+          <ul class="Solutions-sec-points-sec Solutions-sec-points-sec1">
+            <li><img src="./imgnew/Frame 1707482440 (1).png" /> <span>Delta Auto ensures that schools receive fees on
+                time
+                without the hassle of follow-ups.</span></li>
+            <li><img src="./imgnew/Frame 1707482441 (1).png" /> <span>This system
+                automates fee collection through an auto-debit setup, allowing parents to set up payments and forget
+                about
+                them.</span> </li>
+            <li><img src="./imgnew/Frame 1707482442 (1).png" /> <span>Schools benefit from a steady cash flow and
+                reduced
+                administrative tasks, while parents enjoy the
+                convenience of a seamless, automated payment process.</span></li>
 
           </ul>
 
         </div>
         <div class="Solutions-con1-left">
-          <img class="desktop-img-view" src="./imgnew/image 122.png" />
+          <img class="desktop-img-view" src="./imgnew/amico.png" />
         </div>
 
       </div>
       <div class="Our-Solutions-con1">
         <div class="Solutions-con1-left">
-          <img class="desktop-img-view" src="./imgnew/image 123.png" />
+          <img class="desktop-img-view" src="./imgnew/pana.png" />
         </div>
         <div class="Solutions-con1-right">
           <h4>Delta Pay</h4>
           <img class="mobile-img-view" src="./imgnew/image 123.png" />
-          <ul class="Solutions-sec-points-sec">
-            <li>Delta Pay provides a simple, cost-effective way to handle all digital fee payments. </li>
-            <li>This payment gateway
-              easily integrates with your existing systems and supports all modes of digital payment.</li>
-            <li>With Delta Pay,
-              schools can offer a secure and efficient payment process, enhancing the experience for both parents and
-              administrators while keeping transaction costs low.</li>
-
+          <ul class="Solutions-sec-points-sec Solutions-sec-points-sec1">
+            <li><img src="./imgnew/Frame 1707482440 (2).png" /> <span>Delta Pay provides a simple, cost-effective way to
+                handle all digital fee payments. </span></li>
+            <li><img src="./imgnew/Frame 1707482441 (2).png" /> <span>This payment gateway
+                easily integrates with your existing systems and supports all modes of digital payment.</span></li>
+            <li><img src="./imgnew/Frame 1707482442 (2).png" /> <span>With Delta Pay,
+                schools can offer a secure and efficient payment process, enhancing the experience for both parents and
+                administrators while keeping transaction costs low.</span></li>
           </ul>
-
-
         </div>
       </div>
+
+    </div>
+    <div class="right-new-image-sec-count">
+      <img src="./imgnew/pipe2 3.png" />
     </div>
   </div>
 
@@ -195,7 +210,7 @@
     <h2 class="main-new-header">Fast and Secure Payment Method</h2>
     <div class="fast-secure-payment-sec-con">
       <div class="payment-sec-box">
-        <img src="./imgnew/Frame 1707482213.png" />
+        <img src="./imgnew/Frame 1707482213 2.png" />
         <h4 class="main-new-headerh4">Automatic Debit</h4>
         <ul class="Solutions-sec-points-sec">
           <li> Deltape seamlessly integrates with banking systems for automatic fee deductions from parents' accounts.
@@ -207,7 +222,7 @@
         </ul>
       </div>
       <div class="payment-sec-box">
-        <img src="./imgnew/Frame 1707482214.png" />
+        <img src="./imgnew/Frame 1707482214 2.png" />
         <h4 class="main-new-headerh4">Intelligent Reminders</h4>
 
 
@@ -220,7 +235,7 @@
         </ul>
       </div>
       <div class="payment-sec-box">
-        <img src="./imgnew/Frame 1707482214(1).png" />
+        <img src="./imgnew/Frame 1707482214 (1).png" />
         <h4 class="main-new-headerh4">Digital Receipting</h4>
         <ul class="Solutions-sec-points-sec">
           <li>Deltape provides electronic receipts for all fee payments.
@@ -238,7 +253,7 @@
     <div class="Benefits-for-Parents-sec-con">
       <div class="Benefits-for-Parents-sec-con-left">
         <div class="benefit-sec-box">
-          <div><img src="./imgnew/Frame 1707482226.png" /></div>
+          <div><img src="./imgnew/Frame 1707482226 2.png" /></div>
           <div>
             <h4 class="main-new-headerh4">Flexible Instalments</h4>
             <p class="main-new-headerp">Deltape's EMI (Equated Monthly Installment) feature allows parents to pay their
@@ -246,7 +261,7 @@
           </div>
         </div>
         <div class="benefit-sec-box">
-          <div><img src="./imgnew/Frame 1707482227.png" /></div>
+          <div><img src="./imgnew/Frame 1707482227 2.png" /></div>
           <div>
             <h4 class="main-new-headerh4">Customized Plans</h4>
             <p class="main-new-headerp">Deltape works closely with each institute to develop tailored EMI plans that
@@ -255,7 +270,7 @@
           </div>
         </div>
         <div class="benefit-sec-box">
-          <div><img src="./imgnew/Frame 1707482226(1).png" /></div>
+          <div><img src="./imgnew/Frame 1707482226 (1).png" /></div>
           <div>
             <h4 class="main-new-headerh4">Improved Cash Flow</h4>
             <p class="main-new-headerp">By offering EMI options, Deltape helps educational institutes maintain a steady
@@ -265,7 +280,7 @@
         </div>
       </div>
       <div class="Benefits-for-Parents-sec-con-right">
-        <img src="./imgnew/image 119.png" />
+        <img src="./imgnew/pana 2.png" />
       </div>
     </div>
   </div>
@@ -273,7 +288,7 @@
     <div class="Power-Integrations-sec-con">
 
       <div class="Integrations-sec-con-right">
-        <img src="./imgnew/image 140.png" />
+        <img src="./imgnew/pana 3.png" />
       </div>
       <div class="Integrations-sec-con-left">
         <h3>Power Integrations for
@@ -281,16 +296,16 @@
         <p>Connect with the tool of your choice for managing payments</p>
         <div class="Integrations-sub-sec">
           <div class="power-box">
-            <img src="./imgnew/Frame 1707482226(2).png" />
+            <img src="./imgnew/Frame 1707482226 (2).png" />
             <p>Seamless ERP
               Integration</p>
           </div>
           <div class="power-box">
-            <img src="./imgnew/Frame 1707482226(3).png" />
+            <img src="./imgnew/Frame 1707482226 (3).png" />
             <p>Powerful CRM Capabilities</p>
           </div>
           <div class="power-box">
-            <img src="./imgnew/Frame 1707482226(4).png" />
+            <img src="./imgnew/Frame 1707482226 (4).png" />
             <p>Seamless Data Exchange</p>
           </div>
         </div>
@@ -302,25 +317,25 @@
     <h2 class="main-new-header">Deltape Benefits</h2>
     <div class="USPs-box-all">
       <div class="USPs-box-row">
-        <img src="./imgnew/cash-flow (2).png" />
+        <img src="./imgnew/Frame 1707482443.png" />
         <h3>Improved Cash Flow</h3>
         <p>Automated fee collection and EMI options help educational institutes maintain a steady and predictable cash
           flow</p>
       </div>
       <div class="USPs-box-row">
-        <img src="./imgnew/efficiency.png" />
+        <img src="./imgnew/Frame 1707482444.png" />
         <h3>Enhanced Efficiency</h3>
         <p>By digitising & automating fee management process, we help streamline the operations & reduce administrative
           burdens</p>
       </div>
       <div class="USPs-box-row">
-        <img src="./imgnew/best-customer-experience.png" />
+        <img src="./imgnew/Frame 1707482445.png" />
         <h3>Parent Satisfaction</h3>
         <p>User-friendly interface, flexible payment options, & transparent communication foster a positive experience
           for parents</p>
       </div>
       <div class="USPs-box-row">
-        <img src="./imgnew/handcuff 2.png" />
+        <img src="./imgnew/Frame 1707482446.png" />
         <h3>Reduced Delinquencies</h3>
         <p>Intelligent reminders & seamless payment integration help reduce late payments & outstanding dues</p>
       </div>
