--- a/contactus.html
+++ b/contactus.html
@@ -133,7 +133,8 @@
                     <textarea class="name" placeholder="Name"></textarea>
                 </div>
                 <div>
-                    <a href="#" class="btn btn-primary mt-1 py-3 px-5">Book Demo</a>
+                    <a href="https://calendly.com/contact-deltape/30min" target="_blank"
+                        class="btn btn-primary mt-1 py-3 px-5">Book Demo</a>
                 </div>
             </div>
         </div>
