--- a/parents.html
+++ b/parents.html
@@ -121,7 +121,8 @@
                     cutting-edge
                     digital solution.
                 </p>
-                <a href="#" class="btn btn-primary mt-1 py-3 px-5">Book Demo</a>
+                <a href="https://calendly.com/contact-deltape/30min" target="_blank"
+                    class="btn btn-primary mt-1 py-3 px-5">Book Demo</a>
                 <a href="#" class="btn btn-secondary mt-1 py-3 px-5 ml-5 learn-More-btn-sec-top">Learn More</a>
             </div>
             <div class="col-lg-6 text-center main-img-sec-top-sec-div text-lg-right">
