--- a/parents.html
+++ b/parents.html
@@ -454,6 +454,8 @@
                         <a href="#Contact" class="nav-item nav-link active">Compliance</a>
                         <a href="./termsandconditions.html" class="nav-item nav-link active">Terms & Conditions</a>
                         <a href="./privacypolicy.html" class="nav-item nav-link active">Privacy Policy</a>
+                        <a href="./refundPolicy.html" class="nav-item nav-link active">Cancellation & Refund Policy</a>
+
                     </div>
                 </div>
             </div>
