--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -313,6 +313,7 @@
                     <a href="./index.html#Contact" class="nav-item nav-link active">Compliance</a>
                     <a href="./termsandconditions.html" class="nav-item nav-link active">Terms & Conditions</a>
                     <a href="./privacypolicy.html" class="nav-item nav-link active">Privacy Policy</a>
+                    <a href="./refundPolicy.html" class="nav-item nav-link active">Cancellation & Refund Policy</a>
                 </div>
             </div>
 
