--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <link href="css/timeline.css" rel="stylesheet" />
   <link href="css/mystyles.css" rel="stylesheet" />
   <link href="css/faq.css" rel="stylesheet" />
+  <link href="css/wordanimation.css" rel="stylesheet" />
+  <link href="css/newstyles.css" rel="stylesheet" />
   <link href="css/mobile.css" rel="stylesheet" />
   <script type="text/javascript">
     (function (f, b) {
@@ -55,7 +57,7 @@
   <div class="container-fluid bg-light position-fixed shadow">
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
       <a href="./index.html" class="navbar-brand font-weight-bold text-secondary">
-        <span class="text-primary logo-text-main "><img class="logo-text-main-img" src="./imgnew/deltape-logo1.png" />
+        <span class="text-primary logo-text-main "><img class="logo-text-main-img" src="./newimg/Deltapa LOGO.png" />
         </span>
       </a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -105,10 +107,35 @@
   <!-- Navbar End -->
 
   <!-- Header Start -->
-  <div class="container-fluid bg-primary-header1 deltape-page-body-content px-0-px-md-5-mb-5">
-    <div class="row align-items-center px-3">
-      <div class="col-lg-6 text-center text-lg-left px-md-5">
-        <!-- <h4 class="text-white mb-4 mt-5 mt-lg-0">Kids Learning Center</h4> -->
+  <div class="new-home-page-sec-page">
+    <div class="new-home-page-content-page">
+      <div class="fast-sec-btn-sec">
+        <button>Fast. Secure. Hassle-Free</button>
+      </div>
+      <div class="main-new-content-sec">
+        <h5>Effortless Fee Payment – Simplifying </h5>
+        <h5>Payments for Your <div class="words words-1">
+            <span>School</span>
+            <span>College</span>
+            <span>University</span>
+          </div>
+        </h5>
+        <p>Revolutionise the way your school or university collects and manages <br /> student fees with Deltape's
+          cutting-edge
+          digital solution.</p>
+        <div class="action-btn-sec-btns-all">
+          <button class="start-free-btn">Start your free trial</button>
+          <button class="learn-more-free-btn">Learn More</button>
+        </div>
+        <div>
+          <img src="./newimg/Hero image.png" />
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="container-fluid bg-primary-header1 deltape-page-body-content px-0-px-md-5-mb-5">
+    <div class="row333 align-items-center px-3">
+      <div class="col-lg-12 text-center text-lg-left px-md-5">
         <h3 class="display-4 top-header--100 font-weight-bold main-top-header-text text-white1">
           <span class="delta-main-color">Effortless Fee Payment</span>
         </h3>
@@ -123,12 +150,108 @@
           Demo</a>
         <a href="#" class="btn btn-secondary mt-1 py-3 px-5 ml-5 learn-More-btn-sec-top">Learn More</a>
       </div>
-      <div class="col-lg-6 text-center main-img-sec-top-sec-div text-lg-right">
+      <div class="col-lg-12 text-center main-img-sec-top-sec-div text-lg-right">
         <img class="img-fluid main-img-sec mt-522" src="imgnew/home-main-right.png" alt="" />
       </div>
     </div>
+  </div> -->
+
+  <div>
+    <div>
+      <h3 class="new-features-text-head">
+        Features
+      </h3>
+      <h5 class="new-features-text-sub-head">
+        Smart, Secure, and Seamless The <br />Features You Need
+      </h5>
+      <div>
+
+
+        <div class="container mt-5">
+          <div class="tabs-container">
+            <!-- Custom Tab Buttons -->
+            <div class="tab-buttons">
+              <button class="tab-btn active" data-target="deltaZero">Delta Zero</button>
+              <button class="tab-btn" data-target="deltaAuto">Delta Auto</button>
+              <button class="tab-btn" data-target="deltaPay">Delta Pay</button>
+            </div>
+
+            <!-- Tab Content -->
+            <div class="tab-content">
+              <div id="deltaZero" class="tab-pane active">
+                <div class="content-sec-image-new-auto">
+                  <div class="content-sec-image-new-left">
+                    <img src="./newimg/Rectangle 3.png" />
+                  </div>
+                  <div class="content-sec-image-new-right">
+                    <h2>Delta Zero</h2>
+                    <p> <img src="./newimg/Frame.png" />
+                      <span> Delta Zero lets parents pay school fees in easy, zero-interest
+                        installments.</span>
+                    </p>
+                    <p><img src="./newimg/Frame.png" /> It makes education affordable by spreading payments over time,
+                      easing financial stress.
+                    </p>
+                    <p><img src="./newimg/Frame.png" /> Schools can offer a stress-free option, empowering parents to
+                      focus on their children’s education
+                      without hefty upfront costs.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div id="deltaAuto" class="tab-pane">
+                <div class="content-sec-image-new-auto">
+                  <div class="content-sec-image-new-left">
+                    <img src="./newimg/Rectangle 3.png" />
+                  </div>
+                  <div class="content-sec-image-new-right">
+                    <h2>Delta Auto</h2>
+                    <p> <img src="./newimg/Frame.png" />
+                      <span> Delta Auto ensures that schools receive fees on time without the hassle of follow-ups.
+                      </span>
+                    </p>
+                    <p><img src="./newimg/Frame.png" /> This system automates fee collection through an auto-debit
+                      setup, allowing parents to set up payments and forget about them.
+
+                    </p>
+                    <p><img src="./newimg/Frame.png" /> Schools benefit from a steady cash flow and reduced
+                      administrative tasks, while parents enjoy the convenience of a seamless, automated payment
+                      process.
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div id="deltaPay" class="tab-pane">
+                <div class="content-sec-image-new-auto">
+                  <div class="content-sec-image-new-left">
+                    <img src="./newimg/Rectangle 3.png" />
+                  </div>
+                  <div class="content-sec-image-new-right">
+                    <h2>Delta Pay</h2>
+                    <p> <img src="./newimg/Frame.png" />
+                      <span> Delta Pay provides a simple, cost-effective way to handle all digital fee payments.
+                      </span>
+                    </p>
+                    <p><img src="./newimg/Frame.png" /> This payment gateway easily integrates with your existing
+                      systems and supports all modes of digital payment.
+
+                    </p>
+                    <p><img src="./newimg/Frame.png" /> With Delta Pay, schools can offer a secure and efficient payment
+                      process, enhancing the experience for both parents and administrators while keeping transaction
+                      costs low.
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="Our-Solutions-box">
+  <!-- <div class="Our-Solutions-box">
     <h2 class="main-new-header">Our Solutions</h2>
     <div class="Our-Solutions-con">
       <div class="left-new-image-sec-count">
@@ -205,87 +328,104 @@
     <div class="right-new-image-sec-count">
       <img src="./imgnew/pipe2 3.png" />
     </div>
-  </div>
+  </div> -->
+  <div class="fast-secutre-payment-sec">
+    <h3 class="new-features-text-head">
+      Features
+    </h3>
 
-  <div class="fast-secure-payment-sec">
-    <h2 class="main-new-header">Fast and Secure Payment Method</h2>
-    <div class="fast-secure-payment-sec-con">
-      <div class="payment-sec-box">
-        <img src="./imgnew/Frame 1707482213 2.png" />
-        <h4 class="main-new-headerh4">Automatic Debit</h4>
-        <ul class="Solutions-sec-points-sec">
-          <li> Deltape seamlessly integrates with banking systems for automatic fee deductions from parents' accounts.
-          </li>
-          <li> Eliminates the need for manual payment processing.
-          </li>
-          <li> Ensures timely and efficient fee payments.
-          </li>
-        </ul>
-      </div>
-      <div class="payment-sec-box">
-        <img src="./imgnew/Frame 1707482214 2.png" />
-        <h4 class="main-new-headerh4">Intelligent Reminders</h4>
+    <div class="fast-secure-payment-sec">
+      <h2 class="main-new-header">Fast and Secure Payment Method</h2>
+      <div class="fast-secure-payment-sec-con">
+        <div class="payment-sec-box">
+          <img src="./imgnew/Frame 1707482213 2.png" />
+          <h4 class="main-new-headerh4">Automatic Debit</h4>
+          <ul class="Solutions-sec-points-sec">
+            <li> Deltape seamlessly integrates with banking systems for automatic fee deductions from parents' accounts.
+            </li>
+            <li> Eliminates the need for manual payment processing.
+            </li>
+            <li> Ensures timely and efficient fee payments.
+            </li>
+          </ul>
+        </div>
+        <div class="payment-sec-box">
+          <img src="./imgnew/Frame 1707482214 2.png" />
+          <h4 class="main-new-headerh4">Intelligent Reminders</h4>
 
 
 
-        <ul class="Solutions-sec-points-sec">
-          <li>Deltape's advanced reminder system sends timely notifications to parents.
-          </li>
-          <li> It helps parents stay on track with their payment schedules.</li>
-          <li> This prevents late fees or penalties effectively.</li>
-        </ul>
-      </div>
-      <div class="payment-sec-box">
-        <img src="./imgnew/Frame 1707482214 (1).png" />
-        <h4 class="main-new-headerh4">Digital Receipting</h4>
-        <ul class="Solutions-sec-points-sec">
-          <li>Deltape provides electronic receipts for all fee payments.
-          </li>
-          <li>It offers a comprehensive record of transactions for parents and institutes</li>
-          <li>This streamlines the accounting process for educational institutes.</li>
-        </ul>
+          <ul class="Solutions-sec-points-sec">
+            <li>Deltape's advanced reminder system sends timely notifications to parents.
+            </li>
+            <li> It helps parents stay on track with their payment schedules.</li>
+            <li> This prevents late fees or penalties effectively.</li>
+          </ul>
+        </div>
+        <div class="payment-sec-box">
+          <img src="./imgnew/Frame 1707482214 (1).png" />
+          <h4 class="main-new-headerh4">Digital Receipting</h4>
+          <ul class="Solutions-sec-points-sec">
+            <li>Deltape provides electronic receipts for all fee payments.
+            </li>
+            <li>It offers a comprehensive record of transactions for parents and institutes</li>
+            <li>This streamlines the accounting process for educational institutes.</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-
   <div class="Benefits-for-Parents-sec">
+    <h3 class="new-features-text-head">
+      Features
+    </h3>
     <h2 class="main-new-header">Benefits for Parents</h2>
-    <p class="main-new-headerp">We offer a one stop solution to all your fee payment needs.</p>
+    <p class="main-new-headerp">Connect with the tool of your choice for managing payments .</p>
     <div class="Benefits-for-Parents-sec-con">
       <div class="Benefits-for-Parents-sec-con-left">
         <div class="benefit-sec-box">
-          <div><img src="./imgnew/Frame 1707482226 2.png" /></div>
-          <div>
-            <h4 class="main-new-headerh4">Flexible Instalments</h4>
-            <p class="main-new-headerp">Deltape's EMI (Equated Monthly Installment) feature allows parents to pay their
-              child's fees in manageable monthly installments, making education more accessible and affordable.</p>
-          </div>
-        </div>
-        <div class="benefit-sec-box">
-          <div><img src="./imgnew/Frame 1707482227 2.png" /></div>
-          <div>
-            <h4 class="main-new-headerh4">Customized Plans</h4>
-            <p class="main-new-headerp">Deltape works closely with each institute to develop tailored EMI plans that
-              cater to the diverse financial needs of their parent community, ensuring a seamless and inclusive fee
-              payment experience.</p>
-          </div>
-        </div>
-        <div class="benefit-sec-box">
-          <div><img src="./imgnew/Frame 1707482226 (1).png" /></div>
+          <div><img src="./newimg/Improved Cash Flow.png" /></div>
           <div>
             <h4 class="main-new-headerh4">Improved Cash Flow</h4>
-            <p class="main-new-headerp">By offering EMI options, Deltape helps educational institutes maintain a steady
-              and predictable cash flow, enabling them to better plan and allocate their resources for the benefit of
-              their students.</p>
+            <p class="main-new-headerp">Automated fee collection and EMI options help educational institutes maintain a
+              steady and predictable cash flow</p>
+
+          </div>
+        </div>
+        <div class="benefit-sec-box">
+          <div><img src="./newimg/Enhanced Efficiency.png" /></div>
+          <div>
+            <h4 class="main-new-headerh4">Enhanced Efficiency</h4>
+            <p class="main-new-headerp">By digitising & automating fee management process, we help streamline the
+              operations & reduce administrative burdens
+            </p>
+          </div>
+        </div>
+        <div class="benefit-sec-box">
+          <div><img src="./newimg/Reduced Delinquencies.png" /></div>
+
+          <div>
+            <h4 class="main-new-headerh4">Reduced Delinquencies</h4>
+            <p class="main-new-headerp">User-friendly interface, flexible payment options, & transparent communication
+              foster a positive experience for parents</p>
+          </div>
+        </div>
+        <div class="benefit-sec-box">
+          <div><img src="./newimg/Parent Satisfaction.png" /></div>
+          <div>
+            <h4 class="main-new-headerh4">Parent Satisfaction
+            </h4>
+            <p class="main-new-headerp">Intelligent reminders & seamless payment integration help reduce late payments &
+              outstanding dues</p>
           </div>
         </div>
       </div>
-      <div class="Benefits-for-Parents-sec-con-right">
+      <!-- <div class="Benefits-for-Parents-sec-con-right">
         <img src="./imgnew/pana 2.png" />
-      </div>
+      </div> -->
     </div>
   </div>
-  <div class="Power-Integrations-sec">
+  <!-- <div class="Power-Integrations-sec">
     <div class="Power-Integrations-sec-con">
 
       <div class="Integrations-sec-con-right">
@@ -312,9 +452,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="USPs-of-Deltape-sec">
+  <!-- <div class="USPs-of-Deltape-sec">
     <h2 class="main-new-header">Deltape Benefits</h2>
     <div class="USPs-box-all">
       <div class="USPs-box-row">
@@ -342,13 +482,21 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
   <div class="Deltape-Works-sec">
+    <h3 class="new-features-text-head">
+      Features
+    </h3>
+    <h2 class="main-new-header">How Deltape Works</h2>
+    <br />
+    <br />
+    <br />
     <div class="Deltape-Works-sec-con">
+
       <div class="Deltape-Works-sec-con-left">
-        <h2 class="main-new-header">How Deltape Works</h2>
+        <!-- <h2 class="main-new-header">How Deltape Works</h2> -->
 
-
+        <img src="./newimg/How Deltape Works Step 1.png" />
       </div>
       <div class="Deltape-Works-sec-con-right">
 
@@ -359,11 +507,13 @@
           requirements.</p>
         <h5>Step 2</h5>
         <h4 class="main-new-headerh4">Automated Debit Setup</h4>
-        <p class="main-new-headerp">Deltape's intelligent payment engine seamlessly integrates with banks, allowing for
+        <p class="main-new-headerp">Deltape's intelligent payment engine seamlessly integrates with banks, allowing
+          for
           the automatic deduction of fees from parents' accounts on predetermined schedules.</p>
         <h5>Step 3</h5>
         <h4 class="main-new-headerh4">Reminders and Reporting</h4>
-        <p class="main-new-headerp">Deltape's robust reporting and notification system keeps administrators and parents
+        <p class="main-new-headerp">Deltape's robust reporting and notification system keeps administrators and
+          parents
           informed about payment status, outstanding dues, and other relevant fee-related information..</p>
 
       </div>
@@ -375,7 +525,8 @@
   <div class="faq-content">
 
     <h4 class="main-new-header">You have got Questions</h4>
-    <p class="main-new-headerp">Whether you’re curious about our features, our data handling capabilities or integration
+    <p class="main-new-headerp">Whether you’re curious about our features, our data handling capabilities or
+      integration
       options, we’ve got you
       covered. </p>
     <div class="faq-content-con">
@@ -563,6 +714,31 @@
 
   <!-- Template Javascript -->
   <script src="js/main.js"></script>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const tabs = document.querySelectorAll(".tab-btn");
+      const contents = document.querySelectorAll(".tab-pane");
+
+      tabs.forEach(tab => {
+        tab.addEventListener("click", function () {
+          console.log("vinod")
+          // Remove active class from all buttons
+          tabs.forEach(btn => btn.classList.remove("active"));
+          this.classList.add("active");
+
+          // Hide all tab contents
+          contents.forEach(content => {
+            content.classList.remove("active");
+          });
+
+          // Show the selected tab content
+          const target = document.getElementById(this.dataset.target);
+          target.classList.add("active");
+        });
+      });
+    });
+  </script>
 </body>
 
 </html>
