adding new design

--- a/aboutus.html
+++ b/aboutus.html
@@ -107,7 +107,7 @@
     </div>
     <!-- Navbar End -->
     <div class="new-contact-us-page-sec">
-        <h4>Contact Us</h4>
+        <h4>About Us</h4>
         <p>Revolutionise the way your school or university collects and manages<br /> student fees with Deltape's
             cutting-edge digital solution.</p>
         <div class="action-sec-secure-btns-all1">
@@ -119,7 +119,7 @@
     <div class="contact-us-section">
         <div class="contact-us-section-con">
             <div class="contact-us-section-con-left">
-                <h5>Contact Us</h5>
+                <h5>About Us</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
                 <ul>
                     <li> <span> <img src="./imgnew/basil_location-outline.png" /> </span>No. 256, 10th Main, 1st
@@ -230,7 +230,7 @@
               class="nav-item nav-link active">Login for Institutes</a>
             <a target="_blank" href="https://customer.deltape.in/"
               class="nav-item nav-link active">Login for Parents</a> -->
-                        <a href="aboutus.html" class="nav-item nav-link active">About Us</a>
+                        <a href="#aboutUs" class="nav-item nav-link active">About Us</a>
                         <a href="#Contact" class="nav-item nav-link active">Contact Us</a>
                     </div>
                 </div>
