--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.2.0/css/ionicons.min.css"
     integrity="sha256-F3Xeb7IIFr1QsWD113kV2JXaEbjhsfpgrKkwZFGIA4E=" crossorigin="anonymous" />
-
   <!-- Flaticon Font -->
   <!-- <link href="lib/flaticon/font/flaticon.css" rel="stylesheet" /> -->
 
@@ -65,16 +64,16 @@
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         <div class="navbar-nav font-weight-bold font-weight-bold-sec-cont mx-auto py-0">
-          <!-- <a href="index.html" class="nav-item nav-link active">Home</a> -->
-          <a href="#aboutUs" class="nav-item nav-link active">About Us</a>
+          <a href="index.html" class="nav-item nav-link active">Home</a>
+          <a href="aboutus.html" class="nav-item nav-link ">About Us</a>
 
 
-          <a href="./institutes.html" class="nav-item nav-link active">For Institutes</a>
-          <a href="./parents.html" class="nav-item nav-link active">For Parents</a>
+          <a href="./institutes.html" class="nav-item nav-link ">For Institutes</a>
+          <a href="./parents.html" class="nav-item nav-link ">For Parents</a>
           <!-- <a href="#Features" class="nav-item nav-link active">Features</a>
           <a href="#HowitWorks" class="nav-item nav-link active">How it Works</a> -->
           <!-- <a href="#Benefits" class="nav-item nav-link active">Benefits</a> -->
-          <a href="./contactus.html" class="nav-item nav-link active">Contact Us</a>
+          <a href="./contactus.html" class="nav-item nav-link ">Contact Us</a>
         </div>
         <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
@@ -251,84 +250,7 @@
       </div>
     </div>
   </div>
-  <!-- <div class="Our-Solutions-box">
-    <h2 class="main-new-header">Our Solutions</h2>
-    <div class="Our-Solutions-con">
-      <div class="left-new-image-sec-count">
-        <img src="./imgnew/pipe2 2.png" />
-      </div>
-      <div class="Our-Solutions-con1">
-        <div class="Solutions-con1-left">
-          <img class="desktop-img-view" src="./imgnew/Group 1707479869.png" />
-        </div>
-        <div class="Solutions-con1-right">
-          <h4>Delta Zero</h4>
-          <img class="mobile-img-view" src="./imgnew/Group 1707479869.png" />
-          <ul class="Solutions-sec-points-sec Solutions-sec-points-sec1">
-            <li><img src="./imgnew/Frame 1707482440.png" /> <span>Delta Zero lets parents pay school fees in easy,
-                zero-interest installments.</span>
-            </li>
-            <li> <img src="./imgnew/Frame 1707482441.png" /><span>It makes education affordable by spreading payments
-                over
-                time, easing financial stress.</span></li>
-            <li> <img src="./imgnew/Frame 1707482442.png" /><span>Schools can offer a stress-free option, empowering
-                parents
-                to focus on their children’s education
-                without
-                hefty upfront costs.</span></li>
 
-          </ul>
-        </div>
-      </div>
-      <div class="Our-Solutions-con1">
-        <div class="Solutions-con1-right">
-          <h4>Delta Auto</h4>
-          <img class="mobile-img-view" src="./imgnew/image 122.png" />
-          <ul class="Solutions-sec-points-sec Solutions-sec-points-sec1">
-            <li><img src="./imgnew/Frame 1707482440 (1).png" /> <span>Delta Auto ensures that schools receive fees on
-                time
-                without the hassle of follow-ups.</span></li>
-            <li><img src="./imgnew/Frame 1707482441 (1).png" /> <span>This system
-                automates fee collection through an auto-debit setup, allowing parents to set up payments and forget
-                about
-                them.</span> </li>
-            <li><img src="./imgnew/Frame 1707482442 (1).png" /> <span>Schools benefit from a steady cash flow and
-                reduced
-                administrative tasks, while parents enjoy the
-                convenience of a seamless, automated payment process.</span></li>
-
-          </ul>
-
-        </div>
-        <div class="Solutions-con1-left">
-          <img class="desktop-img-view" src="./imgnew/amico.png" />
-        </div>
-
-      </div>
-      <div class="Our-Solutions-con1">
-        <div class="Solutions-con1-left">
-          <img class="desktop-img-view" src="./imgnew/pana.png" />
-        </div>
-        <div class="Solutions-con1-right">
-          <h4>Delta Pay</h4>
-          <img class="mobile-img-view" src="./imgnew/image 123.png" />
-          <ul class="Solutions-sec-points-sec Solutions-sec-points-sec1">
-            <li><img src="./imgnew/Frame 1707482440 (2).png" /> <span>Delta Pay provides a simple, cost-effective way to
-                handle all digital fee payments. </span></li>
-            <li><img src="./imgnew/Frame 1707482441 (2).png" /> <span>This payment gateway
-                easily integrates with your existing systems and supports all modes of digital payment.</span></li>
-            <li><img src="./imgnew/Frame 1707482442 (2).png" /> <span>With Delta Pay,
-                schools can offer a secure and efficient payment process, enhancing the experience for both parents and
-                administrators while keeping transaction costs low.</span></li>
-          </ul>
-        </div>
-      </div>
-
-    </div>
-    <div class="right-new-image-sec-count">
-      <img src="./imgnew/pipe2 3.png" />
-    </div>
-  </div> -->
   <div class="fast-secutre-payment-sec">
     <h3 class="new-features-text-head">
       Features
@@ -341,11 +263,12 @@
           <img src="./imgnew/Frame 1707482213 2.png" />
           <h4 class="main-new-headerh4">Automatic Debit</h4>
           <ul class="Solutions-sec-points-sec">
-            <li> Deltape seamlessly integrates with banking systems for automatic fee deductions from parents' accounts.
+            <li> <img src="./imgnew/Vector_tick.png" /> Deltape seamlessly integrates with banking systems for automatic
+              fee deductions from parents' accounts.
             </li>
-            <li> Eliminates the need for manual payment processing.
+            <li><img src="./imgnew/Vector_tick.png" /> Eliminates the need for manual payment processing.
             </li>
-            <li> Ensures timely and efficient fee payments.
+            <li> <img src="./imgnew/Vector_tick.png" /> Ensures timely and efficient fee payments.
             </li>
           </ul>
         </div>
@@ -356,22 +279,29 @@
 
 
           <ul class="Solutions-sec-points-sec">
-            <li>Deltape's advanced reminder system sends timely notifications to parents.
+            <li><img src="./imgnew/Vector_tick.png" /> Deltape's advanced reminder system sends timely notifications to
+              parents.
             </li>
-            <li> It helps parents stay on track with their payment schedules.</li>
-            <li> This prevents late fees or penalties effectively.</li>
+            <li><img src="./imgnew/Vector_tick.png" /> It helps parents stay on track with their payment schedules.</li>
+            <li><img src="./imgnew/Vector_tick.png" /> This prevents late fees or penalties effectively.</li>
           </ul>
         </div>
         <div class="payment-sec-box">
           <img src="./imgnew/Frame 1707482214 (1).png" />
           <h4 class="main-new-headerh4">Digital Receipting</h4>
           <ul class="Solutions-sec-points-sec">
-            <li>Deltape provides electronic receipts for all fee payments.
+            <li><img src="./imgnew/Vector_tick.png" />Deltape provides electronic receipts for all fee payments.
             </li>
-            <li>It offers a comprehensive record of transactions for parents and institutes</li>
-            <li>This streamlines the accounting process for educational institutes.</li>
+            <li><img src="./imgnew/Vector_tick.png" />It offers a comprehensive record of transactions for parents and
+              institutes</li>
+            <li><img src="./imgnew/Vector_tick.png" />This streamlines the accounting process for educational
+              institutes.</li>
           </ul>
         </div>
+      </div>
+      <div class="action-sec-secure-btns-all">
+        <button class="action-sec-secure-btns-left">Start your free trial</button>
+        <button class="action-sec-secure-btns-right">Learn More</button>
       </div>
     </div>
   </div>
@@ -379,7 +309,7 @@
     <h3 class="new-features-text-head">
       Features
     </h3>
-    <h2 class="main-new-header">Benefits for Parents</h2>
+    <h2 class="main-new-header">Deltape Benefits</h2>
     <p class="main-new-headerp">Connect with the tool of your choice for managing payments .</p>
     <div class="Benefits-for-Parents-sec-con">
       <div class="Benefits-for-Parents-sec-con-left">
@@ -420,69 +350,10 @@
           </div>
         </div>
       </div>
-      <!-- <div class="Benefits-for-Parents-sec-con-right">
-        <img src="./imgnew/pana 2.png" />
-      </div> -->
+
     </div>
   </div>
-  <!-- <div class="Power-Integrations-sec">
-    <div class="Power-Integrations-sec-con">
 
-      <div class="Integrations-sec-con-right">
-        <img src="./imgnew/pana 3.png" />
-      </div>
-      <div class="Integrations-sec-con-left">
-        <h3>Power Integrations for
-          Ease of Use </h3>
-        <p>Connect with the tool of your choice for managing payments</p>
-        <div class="Integrations-sub-sec">
-          <div class="power-box">
-            <img src="./imgnew/Frame 1707482226 (2).png" />
-            <p>Seamless ERP
-              Integration</p>
-          </div>
-          <div class="power-box">
-            <img src="./imgnew/Frame 1707482226 (3).png" />
-            <p>Powerful CRM Capabilities</p>
-          </div>
-          <div class="power-box">
-            <img src="./imgnew/Frame 1707482226 (4).png" />
-            <p>Seamless Data Exchange</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <!-- <div class="USPs-of-Deltape-sec">
-    <h2 class="main-new-header">Deltape Benefits</h2>
-    <div class="USPs-box-all">
-      <div class="USPs-box-row">
-        <img src="./imgnew/Frame 1707482443.png" />
-        <h3>Improved Cash Flow</h3>
-        <p>Automated fee collection and EMI options help educational institutes maintain a steady and predictable cash
-          flow</p>
-      </div>
-      <div class="USPs-box-row">
-        <img src="./imgnew/Frame 1707482444.png" />
-        <h3>Enhanced Efficiency</h3>
-        <p>By digitising & automating fee management process, we help streamline the operations & reduce administrative
-          burdens</p>
-      </div>
-      <div class="USPs-box-row">
-        <img src="./imgnew/Frame 1707482445.png" />
-        <h3>Parent Satisfaction</h3>
-        <p>User-friendly interface, flexible payment options, & transparent communication foster a positive experience
-          for parents</p>
-      </div>
-      <div class="USPs-box-row">
-        <img src="./imgnew/Frame 1707482446.png" />
-        <h3>Reduced Delinquencies</h3>
-        <p>Intelligent reminders & seamless payment integration help reduce late payments & outstanding dues</p>
-      </div>
-    </div>
-
-  </div> -->
   <div class="Deltape-Works-sec">
     <h3 class="new-features-text-head">
       Features
@@ -494,7 +365,6 @@
     <div class="Deltape-Works-sec-con">
 
       <div class="Deltape-Works-sec-con-left">
-        <!-- <h2 class="main-new-header">How Deltape Works</h2> -->
 
         <img src="./newimg/How Deltape Works Step 1.png" />
       </div>
