--- a/institutes.html
+++ b/institutes.html
@@ -30,6 +30,7 @@
     <link href="css/timeline.css" rel="stylesheet" />
     <link href="css/mystyles.css" rel="stylesheet" />
     <link href="css/faq.css" rel="stylesheet" />
+    <link href="css/newstyles.css" rel="stylesheet" />
     <link href="css/mobile.css" rel="stylesheet" />
     <script type="text/javascript">
         (function (f, b) {
@@ -64,16 +65,16 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav font-weight-bold font-weight-bold-sec-cont mx-auto py-0">
-                    <!-- <a href="index.html" class="nav-item nav-link active">Home</a> -->
-                    <a href="#aboutUs" class="nav-item nav-link active">About Us</a>
+                    <a href="index.html" class="nav-item nav-link ">Home</a>
+                    <a href="aboutus.html" class="nav-item nav-link ">About Us</a>
 
 
                     <a href="./institutes.html" class="nav-item nav-link active">For Institutes</a>
-                    <a href="./parents.html" class="nav-item nav-link active">For Parents</a>
-                    <!-- <a href="#Features" class="nav-item nav-link active">Features</a>
+                    <a href="./parents.html" class="nav-item nav-link ">For Parents</a>
+                    <!-- <a href="#Features" class="nav-item nav-link ">Features</a>
           <a href="#HowitWorks" class="nav-item nav-link active">How it Works</a> -->
                     <!-- <a href="#Benefits" class="nav-item nav-link active">Benefits</a> -->
-                    <a href="./contactus.html" class="nav-item nav-link active">Contact Us</a>
+                    <a href="./contactus.html" class="nav-item nav-link ">Contact Us</a>
                 </div>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
@@ -106,141 +107,163 @@
     <!-- Navbar End -->
 
     <!-- Header Start -->
-    <div class="container-fluid bg-primary-header1 deltape-page-body-content px-0-px-md-5-mb-5">
-        <div class="row align-items-center px-3">
-            <div class="col-lg-6 text-center text-lg-left px-md-5">
-                <!-- <h4 class="text-white mb-4 mt-5 mt-lg-0">Kids Learning Center</h4> -->
-                <h3 class="display-4 font-weight-bold main-top-header-text text-white1">
-                    <span class="delta-main-color">Effortless Fee Payment</span>
-                </h3>
-                <h3 class="display-4 font-weight-bold main-top-header-text1 text-white2">
-                    <span class="delta-main-color1"> Every time</span>
-                </h3>
-                <p class="text-white12 mb-4">
-                    Revolutionise the way your school or university collects and manages student fees with Deltape's
+
+    <div class="new-home-page-sec-page">
+        <div class="new-home-page-content-page">
+            <div class="fast-sec-btn-sec">
+                <button>Fast. Secure. Hassle-Free</button>
+            </div>
+            <div class="main-new-content-sec">
+                <h5>Effortless Fee Payment – Simplifying </h5>
+                <h5>Payments for Your <div class="words words-1">
+                        <span>School</span>
+                        <span>College</span>
+                        <span>University</span>
+                    </div>
+                </h5>
+                <p>Revolutionise the way your school or university collects and manages <br /> student fees with
+                    Deltape's
                     cutting-edge
-                    digital solution.
-                </p>
-                <a href="https://calendly.com/contact-deltape/30min" target="_blank"
-                    class="btn btn-primary mt-1 py-3 px-5">Book Demo</a>
-                <a href="#" class="btn btn-secondary mt-1 py-3 px-5 ml-5 learn-More-btn-sec-top">Learn More</a>
-            </div>
-            <div class="col-lg-6 text-center main-img-sec-top-sec-div text-lg-right">
-                <img class="img-fluid main-img-sec mt-5" src="imgnew/home-main-right.png" alt="" />
-            </div>
-        </div>
-    </div>
-
-
-    <div class="fast-secure-payment-sec">
-        <h2 class="main-new-header">Fast and Secure Payment Method</h2>
-        <div class="fast-secure-payment-sec-con">
-            <div class="payment-sec-box">
-                <img src="./imgnew/Frame 1707482213.png" />
-                <h4 class="main-new-headerh4">Automatic Debit</h4>
-                <ul class="Solutions-sec-points-sec">
-                    <li> Deltape seamlessly integrates with banking systems for automatic fee deductions from parents'
-                        accounts.
-                    </li>
-                    <li> Eliminates the need for manual payment processing.
-                    </li>
-                    <li> Ensures timely and efficient fee payments.
-                    </li>
-                </ul>
-            </div>
-            <div class="payment-sec-box">
-                <img src="./imgnew/Frame 1707482214.png" />
-                <h4 class="main-new-headerh4">Intelligent Reminders</h4>
-
-
-
-                <ul class="Solutions-sec-points-sec">
-                    <li>Deltape's advanced reminder system sends timely notifications to parents.
-                    </li>
-                    <li> It helps parents stay on track with their payment schedules.</li>
-                    <li> This prevents late fees or penalties effectively.</li>
-                </ul>
-            </div>
-            <div class="payment-sec-box">
-                <img src="./imgnew/Frame 1707482214(1).png" />
-                <h4 class="main-new-headerh4">Digital Receipting</h4>
-                <ul class="Solutions-sec-points-sec">
-                    <li>Deltape provides electronic receipts for all fee payments.
-                    </li>
-                    <li>It offers a comprehensive record of transactions for parents and institutes</li>
-                    <li>This streamlines the accounting process for educational institutes.</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <div class="Power-Integrations-sec">
-        <div class="Power-Integrations-sec-con">
-
-            <div class="Integrations-sec-con-right">
-                <img src="./imgnew/image 140.png" />
-            </div>
-            <div class="Integrations-sec-con-left">
-                <h3>Power Integrations for
-                    Ease of Use </h3>
-                <p>Connect with the tool of your choice for managing payments</p>
-                <div class="Integrations-sub-sec">
-                    <div class="power-box">
-                        <img src="./imgnew/Frame 1707482226(2).png" />
-                        <p>Seamless ERP
-                            Integration</p>
-                    </div>
-                    <div class="power-box">
-                        <img src="./imgnew/Frame 1707482226(3).png" />
-                        <p>Powerful CRM Capabilities</p>
-                    </div>
-                    <div class="power-box">
-                        <img src="./imgnew/Frame 1707482226(4).png" />
-                        <p>Seamless Data Exchange</p>
-                    </div>
+                    digital solution.</p>
+                <div class="action-btn-sec-btns-all">
+                    <button class="start-free-btn">Start your free trial</button>
+                    <button class="learn-more-free-btn">Learn More</button>
+                </div>
+                <div>
+                    <img src="./newimg/Hero image.png" />
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="USPs-of-Deltape-sec">
+    <div class="Benefits-for-Parents-sec">
+        <h3 class="new-features-text-head">
+            Features
+        </h3>
         <h2 class="main-new-header">Deltape Benefits</h2>
-        <div class="USPs-box-all">
-            <div class="USPs-box-row">
-                <img src="./imgnew/cash-flow (2).png" />
-                <h3>Improved Cash Flow</h3>
-                <p>Automated fee collection and EMI options help educational institutes maintain a steady and
-                    predictable cash
-                    flow</p>
+        <p class="main-new-headerp">Connect with the tool of your choice for managing payments .</p>
+        <div class="Benefits-for-Parents-sec-con">
+            <div class="Benefits-for-Parents-sec-con-left">
+                <div class="benefit-sec-box">
+                    <div><img src="./newimg/Improved Cash Flow.png" /></div>
+                    <div>
+                        <h4 class="main-new-headerh4">Improved Cash Flow</h4>
+                        <p class="main-new-headerp">Automated fee collection and EMI options help educational institutes
+                            maintain a
+                            steady and predictable cash flow</p>
+
+                    </div>
+                </div>
+                <div class="benefit-sec-box">
+                    <div><img src="./newimg/Enhanced Efficiency.png" /></div>
+                    <div>
+                        <h4 class="main-new-headerh4">Enhanced Efficiency</h4>
+                        <p class="main-new-headerp">By digitising & automating fee management process, we help
+                            streamline the
+                            operations & reduce administrative burdens
+                        </p>
+                    </div>
+                </div>
+                <div class="benefit-sec-box">
+                    <div><img src="./newimg/Reduced Delinquencies.png" /></div>
+
+                    <div>
+                        <h4 class="main-new-headerh4">Reduced Delinquencies</h4>
+                        <p class="main-new-headerp">User-friendly interface, flexible payment options, & transparent
+                            communication
+                            foster a positive experience for parents</p>
+                    </div>
+                </div>
+                <div class="benefit-sec-box">
+                    <div><img src="./newimg/Parent Satisfaction.png" /></div>
+                    <div>
+                        <h4 class="main-new-headerh4">Parent Satisfaction
+                        </h4>
+                        <p class="main-new-headerp">Intelligent reminders & seamless payment integration help reduce
+                            late payments &
+                            outstanding dues</p>
+                    </div>
+                </div>
             </div>
-            <div class="USPs-box-row">
-                <img src="./imgnew/efficiency.png" />
-                <h3>Enhanced Efficiency</h3>
-                <p>By digitising & automating fee management process, we help streamline the operations & reduce
-                    administrative
-                    burdens</p>
+
+        </div>
+    </div>
+
+    <div class="fast-secutre-payment-sec">
+        <h3 class="new-features-text-head">
+            Features
+        </h3>
+
+        <div class="fast-secure-payment-sec">
+            <h2 class="main-new-header">Fast and Secure Payment Method</h2>
+            <div class="fast-secure-payment-sec-con">
+                <div class="payment-sec-box">
+                    <img src="./imgnew/Frame 1707482213 2.png" />
+                    <h4 class="main-new-headerh4">Automatic Debit</h4>
+                    <ul class="Solutions-sec-points-sec">
+                        <li> <img src="./imgnew/Vector_tick.png" /> Deltape seamlessly integrates with banking systems
+                            for automatic
+                            fee deductions from parents' accounts.
+                        </li>
+                        <li><img src="./imgnew/Vector_tick.png" /> Eliminates the need for manual payment processing.
+                        </li>
+                        <li> <img src="./imgnew/Vector_tick.png" /> Ensures timely and efficient fee payments.
+                        </li>
+                    </ul>
+                </div>
+                <div class="payment-sec-box">
+                    <img src="./imgnew/Frame 1707482214 2.png" />
+                    <h4 class="main-new-headerh4">Intelligent Reminders</h4>
+
+
+
+                    <ul class="Solutions-sec-points-sec">
+                        <li><img src="./imgnew/Vector_tick.png" /> Deltape's advanced reminder system sends timely
+                            notifications to
+                            parents.
+                        </li>
+                        <li><img src="./imgnew/Vector_tick.png" /> It helps parents stay on track with their payment
+                            schedules.</li>
+                        <li><img src="./imgnew/Vector_tick.png" /> This prevents late fees or penalties effectively.
+                        </li>
+                    </ul>
+                </div>
+                <div class="payment-sec-box">
+                    <img src="./imgnew/Frame 1707482214 (1).png" />
+                    <h4 class="main-new-headerh4">Digital Receipting</h4>
+                    <ul class="Solutions-sec-points-sec">
+                        <li><img src="./imgnew/Vector_tick.png" />Deltape provides electronic receipts for all fee
+                            payments.
+                        </li>
+                        <li><img src="./imgnew/Vector_tick.png" />It offers a comprehensive record of transactions for
+                            parents and
+                            institutes</li>
+                        <li><img src="./imgnew/Vector_tick.png" />This streamlines the accounting process for
+                            educational
+                            institutes.</li>
+                    </ul>
+                </div>
             </div>
-            <div class="USPs-box-row">
-                <img src="./imgnew/best-customer-experience.png" />
-                <h3>Parent Satisfaction</h3>
-                <p>User-friendly interface, flexible payment options, & transparent communication foster a positive
-                    experience
-                    for parents</p>
-            </div>
-            <div class="USPs-box-row">
-                <img src="./imgnew/handcuff 2.png" />
-                <h3>Reduced Delinquencies</h3>
-                <p>Intelligent reminders & seamless payment integration help reduce late payments & outstanding dues</p>
+            <div class="action-sec-secure-btns-all">
+                <button class="action-sec-secure-btns-left">Start your free trial</button>
+                <button class="action-sec-secure-btns-right">Learn More</button>
             </div>
         </div>
-
     </div>
+
     <div class="Deltape-Works-sec">
+        <h3 class="new-features-text-head">
+            Features
+        </h3>
+        <h2 class="main-new-header">How Deltape Works</h2>
+        <br />
+        <br />
+        <br />
         <div class="Deltape-Works-sec-con">
+
             <div class="Deltape-Works-sec-con-left">
-                <h2 class="main-new-header">How Deltape Works</h2>
 
-
+                <img src="./newimg/How Deltape Works Step 1.png" />
             </div>
             <div class="Deltape-Works-sec-con-right">
 
@@ -253,7 +276,8 @@
                 <h5>Step 2</h5>
                 <h4 class="main-new-headerh4">Automated Debit Setup</h4>
                 <p class="main-new-headerp">Deltape's intelligent payment engine seamlessly integrates with banks,
-                    allowing for
+                    allowing
+                    for
                     the automatic deduction of fees from parents' accounts on predetermined schedules.</p>
                 <h5>Step 3</h5>
                 <h4 class="main-new-headerh4">Reminders and Reporting</h4>
@@ -267,6 +291,10 @@
 
 
     </div>
+
+
+
+
     <div class="faq-content">
 
         <h4 class="main-new-header">You have got Questions</h4>
