addingn mobile view

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
       </div>
       <div class="main-new-content-sec">
         <h5>Effortless Fee Payment – Simplifying </h5>
-        <h5>Payments for Your <div class="words words-1">
+        <h5>Payments for Your
+          <div class="words words-1">
             <span>School</span>
             <span>College</span>
             <span>University</span>
